2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* configure.ac: added support for lua on ubuntu (since it uses differently named .pc files)

2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* ember.conf: added correctly named setting for the silt terrain layer

2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/services/server/ServerService.h, src/services/bindings/lua/ServerService.pkg, src/services/bindings/lua/lua_EmberServices.cpp: added default position to the drop method

2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/scripting/bindings/lua/EmberOgre.pkg, src/components/ogre/scripting/bindings/lua/EntityIcon.pkg, src/components/ogre/scripting/bindings/lua/EntityIconManager.pkg, src/components/ogre/scripting/bindings/lua/EntityIconSlot.pkg, src/components/ogre/scripting/bindings/lua/GUIManager.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h: updated bindings

2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.cpp, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.h: added connector for EntityIcon events

2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/Inventory.layout, src/components/ogre/widgets/Inventory.lua, src/components/ogre/widgets/Bootstrap.lua: moved the inventory code into lua, and use the entity icon system. Icons can be dragged and dropped (for now only within the inventory, but they should be draggable onto the world, onto wield and outfit slots on a doll for the avatar, to quickbars etc.). By clicking on the icon a menu will pop up for some basic use cases.

2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/InspectWidget.cpp, src/components/ogre/widgets/InspectWidget.h: cleaned up code

2007-09-17 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
